--- a/style.css
+++ b/style.css
@@ -53,14 +53,14 @@ button{
     text-align: justify;
 }
 h1{
-    font-size: 50px;
+    font-size: 35px;
     padding: 0px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 h2{
-    font-size: 40px;
+    font-size: 30px;
     padding: 0px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: cursive;
     color:rgba(173, 51, 14, 0.884);
   }
 .block_element{
@@ -70,11 +70,14 @@ h2{
     color:black; 
 }
 .flexContainer{
+  width: 600px;
   display: flex;
   padding: 5px;
 }
 .child{
-  width: 33%;
-  padding: 5px;
+  width: 200px;
+  height: 250px;
+  padding: 10px;
   margin: auto;
-}
+  background-color: darkgray;
+ }
