--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ nav {
     padding: 25px;
   }
   .content{
-    width: 600px;
+    width: 800px;
     margin: 0 auto;
     padding: 5px;
   }
@@ -49,35 +49,78 @@ p {
 button{
     color:rgb(32, 32, 32);
     padding: 10px;
-    margin: 5px;
-    text-align: justify;
+    margin: 50px;
+    margin-left: 300px;
 }
 h1{
-    font-size: 35px;
+    font-size: 30px;
     padding: 0px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 h2{
-    font-size: 30px;
+    font-size: 20px;
     padding: 0px;
     font-family: cursive;
-    color:rgba(173, 51, 14, 0.884);
+    color:rgba(199, 53, 8, 0.884);
   }
 .block_element{
     font-size: 15px;
     padding: 30px;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family:'Architects Daughter', cursive;
     color:black; 
 }
 .flexContainer{
-  width: 600px;
-  display: flex;
-  padding: 5px;
+  width: 550px;
+  display: inline-flex;
+  padding: 15px;
+  margin-left: 80px;
 }
 .child{
   width: 200px;
-  height: 250px;
-  padding: 10px;
-  margin: auto;
-  background-color: darkgray;
+  height: 225px;
+  padding: 12px;
+  margin: 10px;
+  background-color: rgba(248, 247, 247, 0.726);
  }
+ h3{
+  font-size: 20px;
+  padding: 2px;
+  font-family: cursive;
+  color:rgba(199, 53, 8, 0.884);
+}
+.workGrid{
+  display: grid;
+  margin-left: 200px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas: 
+  topLeftImage topRightImage
+  bottomLeftImage bottomRightimage
+ ;
+}
+.topLeftImage {
+  grid-area: auto;
+}
+.topRightImage {
+  grid-area: auto;
+}
+.bottomLeftImage {
+  grid-area: auto;
+}
+.bottomRightimage {
+  grid-area: auto;
+}
+h4{
+  font-size: 18px;
+  padding: 5px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color:rgba(27, 25, 24, 0.884);
+  margin-left: 50px;
+}
+h5{
+  font-size: 25px;
+  padding: 10px;
+  font-family: cursive; 
+  color:rgba(199, 53, 8, 0.884);
+  margin-left: 500px;
+}
