--- a/style.css
+++ b/style.css
@@ -71,24 +71,24 @@ h2{
 }
 .flexContainer{
   width: 550px;
-  display: inline-flex;
+  display:inline-flex;
   padding: 15px;
   margin-left: 80px;
 }
-.child{
+#child{
   width: 200px;
   height: 225px;
   padding: 12px;
   margin: 10px;
   background-color: rgba(248, 247, 247, 0.726);
  }
- h3{
+h3{
   font-size: 20px;
   padding: 2px;
   font-family: cursive;
   color:rgba(199, 53, 8, 0.884);
 }
-.workGrid{
+#workGrid{
   display: grid;
   margin-left: 200px;
   grid-template-columns: 1fr 1fr;
@@ -124,20 +124,21 @@ h5{
   color:rgba(199, 53, 8, 0.884);
   margin-left: 500px;
 }
-@media only screen and  (max-width: 600){
-  .flexContainer{
-    flex-direction: column;
-  }
-  .child{
+@media only screen and (max-width: 600px) {
+  .flexContainer {
+  flex-direction: column;  
+  }     
+  #child {
     width: 100%;
   }
-  .workGrid{
+  #workGrid {
     grid-template-columns: 1fr;
     grid-template-rows: 300px 300px 300px 300px;
     grid-template-areas: 
-    "topLeftImage"
-    "topRightImage"
-    "bottomLeftImage"
-    "bottomRightimage"
- ;
+      "topLeftImage"
+      "topRightImage"
+      "bottomLeftImage"
+      "bottomRightimage"
+    ;
+  } 
 }
