--- a/style.css
+++ b/style.css
@@ -1,103 +1,26 @@
-nav {
-    width: 100%;
-    padding: 1%;
-    vertical-align: 0px;
-  }
-  .inline-block{
-    display: inline-block;
-    vertical-align: center;
-  }
-  .Logo{
-    width: 23%;
-    padding: 1%;
-    text-align: center;
-  }
-  ul{
-    width: 70%;
-    margin-left:10px;
-  }
-  .heroImg{
-    height: 600px;
-    padding: 25px;
-  }
-  .content{
-    width: 800px;
-    margin: 0 auto;
-    padding: 5px;
-  }
-  footer{
-    width: 95%;
-    background-color: #2F5259;
-    text-align: center;
-    padding: 10px;
-    color:beige;
-    margin: 25px;
- }
-  li{
-    padding: 15px;
-    font-size: 20px;
-    font-family: fantasy;
-  }
-  footer > ul {
-    display: inline-table;
- }   
-p {
-  font-size: 15px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  padding: 5px;
-}   
-button{
-    color:rgb(32, 32, 32);
-    padding: 10px;
-    margin: 50px;
-    margin-left: 300px;
+/* MAIN BODY ELEMENTS */
+body {
+  min-width:320px;
+  max-width: 1280px;
+  margin:0 auto;
 }
+/* TYPOGRAPHY */
 h1{
-    font-size: 30px;
-    padding: 0px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
-h2{
-    font-size: 20px;
-    padding: 0px;
-    font-family: cursive;
-    color:rgba(199, 53, 8, 0.884);
-  }
-.block_element{
-    font-size: 15px;
-    padding: 30px;
-    font-family:'Architects Daughter', cursive;
-    color:black; 
+  font-size: 30px;
+  padding: 0px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-
-
+h2{
+  font-size: 20px;
+  padding: 0px;
+  font-family: cursive;
+  color:rgba(199, 53, 8, 0.884);
+}
 h3{
   font-size: 20px;
   padding: 2px;
   font-family: cursive;
   color:rgba(199, 53, 8, 0.884);
-}
-#workGrid{
-  display: grid;
-  margin-left: 200px;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  grid-template-areas: 
-  "topLeftImage" "topRightImage"
-  "bottomLeftImage" "bottomRightimage"
- ;
-}
-.topLeftImage {
-  grid-area: auto;
-}
-.topRightImage {
-  grid-area: auto;
-}
-.bottomLeftImage {
-  grid-area: auto;
-}
-.bottomRightimage {
-  grid-area: auto;
 }
 h4{
   font-size: 18px;
@@ -111,33 +34,119 @@ h5{
   padding: 10px;
   font-family: cursive; 
   color:rgba(199, 53, 8, 0.884);
-  margin-left: 500px;
+  text-align:center;
 }
+
+p {
+  font-size: 15px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  padding: 5px;
+}  
+
+/* MAIN NAV SECTION */
+nav {
+  width: 100%;
+  padding: 1%;
+  vertical-align: 0px;
+}
+.inline-block{
+  display: inline-block;
+  vertical-align: center;
+}
+.Logo{
+  width: 23%;
+  padding: 1%;
+  text-align: center;
+}
+ul{
+  width: 70%;
+  margin-left:10px;
+}
+
+li{
+  padding: 15px;
+  font-size: 20px;
+  font-family: fantasy;
+}
+
+.block_element{
+  font-size: 15px;
+  padding: 30px;
+  font-family:'Architects Daughter', cursive;
+  color:black; 
+}
+
+/* HERO CONTENT SECTION */
+.heroImg{
+  /* height: 600px; */
+  padding: 25px;
+}
+.content{
+  /* width: 800px; */
+  margin: 0 auto;
+  padding: 5px;
+}
+
+/* BUTTONS */
+button{
+    color:rgb(32, 32, 32);
+    padding: 10px;
+    margin: 0 auto;
+    display:block;
+}
+
+
+
+/* My UX Skills section coded using CSS flex */
 .flexContainer{
   /*width: 550px;*/
   display: flex;
-  padding: 15px;
-  margin-left: 80px;
   flex-direction: row;
-  background-color: #2F5259;
-}
+  justify-content:space-evenly;
+  padding: 15px;
+  /* margin-left: 80px; */
+ }
 
 .child{
-  width: 200px;
-  height: 225px;
+  /* width: 200px; */
+  /* height: 225px; */
   padding: 12px;
-  margin: 10px;
+  margin: 10px 5px;
   background-color: rgba(248, 247, 247, 0.726);
  }
 
-@media only screen and (min-width: 300px) {
+ @media screen and (max-width: 414px) {
   .flexContainer {
-    flex-direction: column; 
+    flex-direction: column;
     background-color: blueviolet; 
   }     
-  .child {
-    width: 100%;
-  }
+}
+
+/* My Work Section Constructed using CSS Grid */
+#workGrid{
+  display: grid;
+  justify-items: center;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas: 
+  "topLeftImage" "topRightImage"
+  "bottomLeftImage" "bottomRightimage";
+  padding:10px;
+}
+.topLeftImage {
+  grid-area: auto;
+}
+.topRightImage {
+  grid-area: auto;
+}
+.bottomLeftImage {
+  grid-area: auto;
+}
+.bottomRightimage {
+  grid-area: auto;
+}
+
+@media screen and (max-width: 414px) {
   #workGrid {
     grid-template-columns: 1fr;
     grid-template-rows: 300px 300px 300px 300px;
@@ -147,5 +156,20 @@ h5{
       "bottomLeftImage"
       "bottomRightimage"
     ;
-  } 
+    background-color: blueviolet;
+    padding:0;
+  }
+
 }
+
+/* FOOTER SECTION */
+footer{
+  background-color: #2F5259;
+  text-align: center;
+  color:beige;
+  margin: 25px auto;
+}
+
+footer > ul {
+  display: inline-table;
+} 
